# shorah

./: .clang-format  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG  CMakeLists.txt  Dockerfile  INSTALL  Makefile  Makefile.am  Makefile.legacy  README  README.md  _config.yml  action.yaml  amplian.py  bam2msa.py  build.py  configure.ac  contain  dec.py  diri_sampler  entrypoint.sh  environment.yml  fas2read.pl  freqEst  global.md  help.md  index.html  index.md  index_old.html  input.md  local.md  meson.build  mm.py  old_README  params.json  plot_sampling.py  plot_stat.py  pyproject.toml  (+10 more)
.github/workflows/: artifact.yaml  release.yaml  tests.yaml  tests_and_release.yaml
ShoRAH_project.xcodeproj/: project.pbxproj
ShoRAH_project.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ShoRAH_project.xcodeproj/project.xcworkspace/xcuserdata/ozagordi.xcuserdatad/: UserInterfaceState.xcuserstate
ShoRAH_project.xcodeproj/xcuserdata/ozagordi.xcuserdatad/xcschemes/: diri_sampler.xcscheme  xcschememanagement.plist
_layouts/: slate_home.html  slate_mod.html  slate_posts.html
_posts/: 2012-11-20-local.md  2012-11-21-index.md
_site/: global.html  help.html  index.html  index_md.html  input.html  local.html  local_post.html
_site/jekyll/: index_md.html
amplicon_test/: README.md  amplicon_reads.fastq
b2w_src/: b2w.c
cmake/: FindHTSlib.cmake  popcnt.c  popcnt.cmake
contain_src/: contain.cc
docs/: _config.yml  b2w.rst  cli.rst  conf.py  cpp.rst  getting-started.rst  index.rst  requirements.txt
docs/_includes/: about.html  contact_static.html  footer.html  header.html  modals.html  nav.html  use_cases.html
docs/_includes/css/: main.css
docs/_layouts/: default.html
docs/_posts/: 2018-04-23-amplicon.markdown  2018-04-23-shotgun.markdown
docs/img/: draw_images.R
dpm_src/: dpm_sampler.cpp  dpm_sampler.h
example_data/: README.md  alt.fasta  clean.sh
examples/: run_end2end_test
examples/amplicon_test/: README.md  amplicon_test
examples/long_deletions_test/: SNV.txt  SNVs_0.010000.txt  test_aln.cram.crai  test_long_deletions.py
examples/shotgun_test/: shotgun_test  test.csv
filter_src/: fil.c
freqEst_src/: freqEst.cc
images/: draw_images.R
jekyll/: global.html  index.html  input.html  local.html  local_post.html  params.json
lib/include/: b2w.hpp  data_structures.hpp  dpm_sampler.hpp  exec_dpm_sampler.hpp  fil.hpp
lib/src/: b2w.cpp  bindings.cpp  dpm_sampler.cpp  fil.cpp
perllib/: DNA.pm  NikoUtil.pm  Util.pm
pythonlib/: MarkxIO.py  SFFParser.py  matching.py
sam_files/: HIV-reads.sam  HIV-ref.fasta  HIV-ref.fasta.fai  HIV_amplicon.fasta  amplicon_reads.fasta  amplicon_reads.sam  amplicon_reads_sorted.bam  convert_sort_index.sh
sample_data/: README.md  prepare.sh  ref.fasta
samtools/: samtools
samtools/bcftools/: bcftools
samtools/misc/: maq2sam-long  maq2sam-short  md5fa  md5sum-lite  seqtk  wgsim
samtools/misc/maq2sam-long.dSYM/Contents/: Info.plist
samtools/misc/maq2sam-short.dSYM/Contents/: Info.plist
samtools/samtools.xcodeproj/: project.pbxproj
samtools/samtools.xcodeproj/xcuserdata/ozagordi.xcuserdatad/xcschemes/: samtools.xcscheme  (+1 more)
shorah/: b2w.py  cli.py  shorah_snv.py  shotgun.py  tiling.py
shorah/local_haplotype_inference/CRP_gibbs_sampling/: analyze_results.py  auxiliary_dpm_sampling.py  convergence_diagnostics.py  extra.py  preparation.py  sampling_main.py
shorah/local_haplotype_inference/learn_error_params/: analyze_results.py  cavi.py  preparation.py  run_dpm_mfa.py
shorah/local_haplotype_inference/mean_field_approximation/: analyze_results.py  cavi.py  elbo_eqs.py  initialization.py  learn_error_params_analyze_results.py  learn_error_params_cavi.py  learn_error_params_elbo_eqs.py  preparation.py  quality_scores_analyze_results.py  quality_scores_cavi.py  quality_scores_update_eqs.py  run_dpm_mfa.py  update_eqs.py  update_equations.py
shorah/local_haplotype_inference/numpyro_implementation/: helper.py  models_NumPyro.py  preprocessing.py  run_mcmc.py
shorah/local_haplotype_inference/use_quality_scores/: analyze_results.py  cavi.py  elbo_eqs.py  initialization.py  preparation.py  run_dpm_mfa.py
src/: meson.build
src/cpp/: b2w.cpp  dpm_sampler.cpp  dpm_sampler.hpp  fil.cpp  meson.build
src/perl/: ReadUtil.pm
src/python/: __main__.py.in  amplicon.py  amplicon.py.in  cli.py  cli.py.in  shorah_dec.py  shorah_matching.py  shorah_mm.py  shorah_snv.py  shorah_snv.py.in  shotgun.py.in
src/samtools/: meson.build
src/scripts/: amplian.py.in  dec.py.in  fas2read.pl.in  mm.py.in  shorah.py.in  snv.py.in
src/shorah/: __main__.py  amplicon.py  b2w.cpp  b2w.py  cli.py  contain.cpp  data_structures.hpp  doxyfile  dpm_sampler.cpp  dpm_sampler.hpp  fil.cpp  freqEst.cpp  shorah_snv.py  shotgun.py  tiling.py
stylesheets/: stylesheet.css
tests/: helper_long_deletions.py  test_b2w.py  test_b2w_mapping.py  test_bindings.py  test_long_deletions.py  test_shotgun_e2e.py  test_tiling.py  tests.sh
tests/b2w/: test_unit.py
tests/b2w/data/: coverage.txt  reads.fas  test_aln.cram  test_aln.cram.crai  test_ref.fasta.fai  w-HXB2-2268-2468.reads.fas  w-HXB2-2335-2535.reads.fas  w-HXB2-2402-2602.reads.fas  w-HXB2-2469-2669.reads.fas  w-HXB2-2536-2736.reads.fas  w-HXB2-2603-2803.reads.fas  w-HXB2-2670-2870.reads.fas  w-HXB2-2737-2937.reads.fas  w-HXB2-2804-3004.reads.fas  w-HXB2-2871-3071.reads.fas  w-HXB2-2938-3138.reads.fas  w-HXB2-3005-3205.reads.fas  w-HXB2-3072-3272.reads.fas  w-HXB2-3139-3339.reads.fas  w-HXB2-3206-3406.reads.fas  w-HXB2-3273-3473.reads.fas  w-HXB2-3340-3540.reads.fas  w-HXB2-3407-3607.reads.fas  w-HXB2-3474-3674.reads.fas  w-HXB2-3541-3741.reads.fas  w-HXB2-3608-3808.reads.fas  w-HXB2-3675-3875.reads.fas
tests/data_1/: README.md  scheme.insert.bed  shotgun_test.sh  test.csv
tests/data_2/: REF_aln.bam  cohort_consensus.fasta
tests/data_3/: REF_aln.bam
tests/data_5/: README.md  ref.fasta  shotgun_prepare.sh  test_aln.cram
tests/data_6/: README.md  ground_truth.csv  reads.shotgun.bam  reads.shotgun.bam.bai  reference.fasta  reference.fasta.fai  scheme.insert.bed
(+2 files in other folders)
